# ots

./: .gitignore  AUDIT.md  AUDIT.md.ots  README.md  README.md.ots  pyproject.toml  pyproject.toml.ots
data/: README.md
examples/: cxr_segmentation_distortion.ipynb  delaware_calibration.ipynb  delaware_wealth_calibration.ipynb  ecg_subgroup_distortion.ipynb  education_wealth_decoupling.ipynb  national_wealth_calibration.ipynb
structural_impedance/: __init__.py  __init__.py.ots  cumulant.py  cumulant.py.ots  findings.py  findings.py.ots  gamma_correction.py  gamma_correction.py.ots  provenance.py  provenance.py.ots  reclamation.py  reclamation.py.ots  sheaf_gluing.py  sheaf_gluing.py.ots  sinkhorn.py  sinkhorn.py.ots  transmission_diagnostic.py  transmission_diagnostic.py.ots
tests/: conftest.py
tests/structural_impedance/: test_admit_per_component.py  test_citation_conformance.py  test_diagnostic_failure_modes.py  test_format_for_registers.py  test_gamma_plus_gamma_star_guard.py  test_kappa_independent_zero.py  test_null_gate_silent.py  test_phi_endpoints.py  test_phi_no_complex_denom.py  test_provenance_completeness.py  test_reclamation_roundtrip.py  test_sheaf_null_valid.py  test_sheaf_single_violation.py  test_sim_no_closed_form.py
