[project]
name = "structural-impedance"
version = "0.1.0"
description = "Per-component distribution-divergence triangulator across cumulant, sheaf, and impedance interfaces. Domain-blind, unit-blind, anti-aggregation."
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Obra Foundry Core Maintainers"},
]
keywords = [
    "cumulant",
    "sheaf",
    "optimal-transport",
    "subgroup-validation",
    "distribution-divergence",
    "anti-aggregation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.26,<2.0",
    "torch>=2.1,<3.0",
    "scipy>=1.11,<2.0",
]

[project.urls]
Homepage = "https://github.com/obra-foundry/ots"
Repository = "https://github.com/obra-foundry/ots"
Issues = "https://github.com/obra-foundry/ots/issues"
Audit = "https://github.com/obra-foundry/ots/blob/main/AUDIT.md"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths  = ["tests/structural_impedance"]
pythonpath = ["."]
